--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,23 @@ attrs==20.3.0
 autobahn==21.3.1
 Automat==20.2.0
 cffi==1.14.5
-django-heroku==0.3.1
-gunicorn==20.1.0
 channels==3.0.3
 channels-redis==3.2.0
+click==7.1.2
 constantly==15.1.0
 cryptography==3.4.7
 daphne==3.0.2
+dj-database-url==0.5.0
 Django==3.2
+django-heroku==0.3.1
+gunicorn==20.1.0
+h11==0.12.0
 hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.1
 incremental==21.3.0
 msgpack==1.0.2
+psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -28,4 +32,6 @@ six==1.15.0
 sqlparse==0.4.1
 Twisted==21.2.0
 txaio==21.2.1
+uvicorn==0.13.4
+whitenoise==5.2.0
 zope.interface==5.3.0
